# AI-Traffic-Analysis

./: .dockerignore  .gitignore  .gitmodules  API.md  Dockerfile  MIGRATION_CHECKLIST.md  POSTMAN_TESTING.md  POSTMAN_TESTING.vi.md  README-vi.md  README.md  REFACTORING_SUMMARY.md  TRAINING_GUIDE.md  api_test.py  client_example.py  docker-compose.dev.yml  docker-compose.yml  main.py  plate_ocr_api.py  pyproject.toml  requirements.txt  traffic-ai.postman_collection.json
aiml-research-lowres-vn-lpr/: 01-bao-cao-nghien-cuu.md  02-bang-20-bai-viet.md  03-tco-risk-register.md  nblm-output.json
aiml-research-lowres-vn-lpr/eval-protocol/: eval-script.py  protocol.md  results-template.csv
aiml-research-lowres-vn-lpr/install-guides/: repo-1-fast-alpr.md  repo-2-fast-plate-ocr.md  repo-3-lpsr-lacd-LCOFL.md  repo-4-mrzaizai2k-VN.md  repo-5-CCPD-RPnet.md
api/: fusion-svc-API.md  fusion-svc-POSTMAN.md  fusion-svc-POSTMAN.vi.md  fusion-svc-POSTMAN_TESTING.vi.md  fusion-svc.postman_collection.json  traffic-ai-API-vi.md  traffic-ai-API.md  traffic-ai-POSTMAN.md  traffic-ai-POSTMAN.vi.md  traffic-ai-POSTMAN_TESTING.md  traffic-ai-POSTMAN_TESTING.vi.md  traffic-ai.postman_collection.json
detectors/: README.md
detectors/rf-detr/: README.md  infer.py  train.py
detectors/yolo/: train_ultralytics.py
docs/: DASHBOARD_EXAMPLES.md  DASHBOARD_README.md  DASHBOARD_VISUAL_GUIDE.md
docs/superpowers/plans/: 2026-06-16-batch-vehicle-detection-api.md  2026-06-18-multiframe-plate-fusion.md
docs/superpowers/specs/: 2026-06-16-batch-vehicle-detection-api-design.md  2026-06-18-multiframe-plate-fusion-design.md
fusion_svc/: API.md  POSTMAN_TESTING.md  README.md  pyproject.toml
fusion_svc/fusion_svc/: app.py
fusion_svc/fusion_svc/adapters/: eott_adapter.py  mflpr2_adapter.py
fusion_svc/tests/: test_eott_adapter.py  test_fuse_endpoint.py  test_mflpr2_adapter.py
research/: vehicle-make-model-sota.md
scripts/: _depcheck.py  batch_plate_ocr.py  detect_image.py  e2e_plate_ocr_api.py  eval_sr_ab.py  install.sh  install_fusion_inproc.sh  parking_services.py  parking_services_base64.py  smoke_api.py  smoke_api_all.py  smoke_batch.py  smoke_import.py  smoke_plate_ocr_api.py  smoke_sr.py  test_alpr.py  train_yolo.example.sh
tests/: test_batch_endpoint.py  test_collect_bursts.py  test_fusion_client.py  test_multiframe_endpoint.py  test_plate_burst.py  test_video_endpoint.py
utils/: alpr_core.py  fusion_client.py  plate_burst.py  sr.py  traffic_analysis.py
webapp/: requirements.txt
webapp/backend/: dashboard_api.py  main.py
webapp/frontend/: alpr_stream.js  dashboard.css  dashboard.html  dashboard.js  index.html  style.css
weights/: README.md
