[project]
name = "ai-traffic-analysis"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "ultralytics",
    "opencv-python-headless",
    "numpy",
    "aiortc",
    "easydict",
    "onnx",
    "onnxruntime",
    "filterpy",
    "scikit-learn",
    "scikit-image",
    "matplotlib",
    "tqdm",
    "pandas",
    "seaborn",
    "shapely",
    "pyclipper",
    "python-multipart>=0.0.32",
]

[tool.uv]
dev-dependencies = [
    "httpx2>=2.4.0",
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["."]
