[project]
name = "ai-traffic-analysis"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "ultralytics",
    "opencv-python-headless",
    "numpy",
    "aiortc",
    "easydict",
    "onnx",
    "onnxruntime",
    "filterpy",
    "scikit-learn",
    "scikit-image",
    "matplotlib",
    "tqdm",
    "pandas",
    "seaborn",
    "shapely",
    "pyclipper",
    "python-multipart>=0.0.32",
    "dill>=0.4.1",
    "fast-plate-ocr>=1.1.0",
    "paddleocr>=3.7",
    "paddlepaddle>=3.3.1",
    "httpx>=0.28.1",
]

[tool.uv]
dev-dependencies = [
    "httpx2>=2.4.0",
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["."]
# fusion_svc/ is a self-contained uv subproject with its own venv (mf-lpr2/eott);
# it has its own test suite — exclude it from the parent run.
addopts = "--ignore=fusion_svc"
